--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       gtag('js', new Date());
       gtag('config', 'G-95511G6L8Z');
     </script>
-    <meta name="description" content="We bring amazing cars to kids at hospitals, schools, and community programs.">
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' rx='12' fill='%23111'/%3E%3Ctext x='50' y='65' font-family='Arial' font-size='40' font-weight='bold' fill='%232563eb' text-anchor='middle'%3EC%26K%3C/text%3E%3C/svg%3E">
+    <meta name="description" content="We bring extraordinary cars to kids who need a lift—physically, emotionally, or both.">
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' rx='12' fill='%23111'/%3E%3Cpath d='M15 55 L20 45 L30 40 L70 40 L80 45 L85 55 L85 65 L15 65 Z' fill='%232563eb'/%3E%3Ccircle cx='30' cy='65' r='8' fill='%23111'/%3E%3Ccircle cx='70' cy='65' r='8' fill='%23111'/%3E%3Crect x='35' y='45' width='12' height='8' rx='1' fill='%2381b4ff'/%3E%3Crect x='53' y='45' width='12' height='8' rx='1' fill='%2381b4ff'/%3E%3C/svg%3E">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,8 +33,8 @@
         <!-- Hero -->
         <section class="hero">
             <div class="hero-text">
-                <h1>Cool cars for kids who need a lift.</h1>
-                <p>We bring amazing cars to hospitals, schools, and community programs to create moments of real excitement for kids.</p>
+                <h1>Cars & Kids</h1>
+                <p>We bring extraordinary cars to kids who need a lift—physically, emotionally, or both.</p>
                 <a href="#get-involved" class="btn-primary">Get Involved</a>
             </div>
             <div class="hero-image">
@@ -53,7 +53,9 @@
         <section id="about" class="about">
             <div class="about-content">
                 <h2>What We Do</h2>
-                <p>We bring specially curated exotics, classics, and supercars to kids at hospitals, schools, and community programs. Kids get to climb in, hear the engines, and experience something memorable. It's about creating real moments of empowerment and joy.</p>
+                <p>We curate meaningful car experiences for kids at hospitals, schools, and community programs.</p>
+                <p>Kids climb in. They hear the engines. They feel the vibration, the weight, the reality of something powerful and alive. For a moment, their world expands.</p>
+                <p>These moments aren't about cars.<br>They're about agency, curiosity, and energy moving from one person to another.</p>
             </div>
         </section>
 
@@ -62,12 +64,24 @@
             <img src="images/car3.jpeg" alt="Cars & Kids event">
         </section>
 
+        <!-- Why Cars -->
+        <section class="why-cars">
+            <div class="why-cars-content">
+                <h2>Why Cars</h2>
+                <p>Cars command attention. They carry weight. Sound. Presence.</p>
+                <p>When something like that shows up for you, it changes how the day feels. Sometimes how the week feels. Occasionally how you see yourself.</p>
+                <p>We believe that presence—real, tangible presence—can interrupt fear, boredom, pain, or limitation.<br>Cars just happen to be an unusually effective delivery system.</p>
+            </div>
+        </section>
+
         <!-- Belief -->
         <section class="belief">
             <div class="belief-content">
                 <div class="belief-label">What We Believe</div>
-                <p>Cars have a unique power to inspire. The sound, the presence, the experience of being behind the wheel. These moments can shift a kid's day, their week, or even how they see themselves.</p>
-                <p>We're here to transfer that energy directly to kids who can use it most.</p>
+                <p>Momentum is not abstract.<br>Energy transfers when people show up with intention.</p>
+                <p>A great car has gravity.<br>A committed human behind it has conviction.</p>
+                <p>When those meet a kid who needs a spark, something real happens.</p>
+                <p>That's the work.</p>
             </div>
         </section>
 
@@ -80,22 +94,21 @@
         <!-- Get Involved -->
         <section id="get-involved" class="get-involved">
             <h2>Get Involved</h2>
-            <p class="get-involved-intro">Join us in bringing amazing cars to kids and help empower them through unforgettable experiences.</p>
             
             <div class="involve-cards">
                 <button onclick="openModal('drive')" class="involve-card">
                     <h3><span>→</span> Bring your car</h3>
-                    <p>Own something special? Help us create an unforgettable experience for kids.</p>
+                    <p>If you own something special, you can turn it into something meaningful.</p>
                 </button>
 
                 <button onclick="openModal('visit')" class="involve-card">
                     <h3><span>→</span> Request a visit</h3>
-                    <p>Work with a hospital, school, or program? We'd love to come to you.</p>
+                    <p>Hospitals, schools, and community organizations—we come to you.</p>
                 </button>
 
                 <button onclick="openModal('support')" class="involve-card">
-                    <h3><span>→</span> Support us</h3>
-                    <p>Your support helps us reach more kids and create more moments.</p>
+                    <h3><span>→</span> Support the mission</h3>
+                    <p>Help us scale presence. Help us reach farther.</p>
                 </button>
             </div>
         </section>
@@ -117,7 +130,7 @@
     <footer class="footer">
         <div class="footer-left">
             <div class="footer-logo">Cars <span>&</span> Kids</div>
-            <p>Energy and momentum, transferred.</p>
+            <p>Energy, deliberately transferred.</p>
         </div>
         <a href="mailto:info@carsandkids.net" class="footer-email">info@carsandkids.net</a>
     </footer>
